--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <section>
+        <div>
+            <h1></h1>
+        </div>
+    </section>
     <h1>Gerenciador de Tarefas</h1>
     <hr>
 
