preparando as divs

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
     <section>
         <div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
             <h1></h1>
         </div>
     </section>
