--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/assets/css/style.css">
     <title>sistemadetarefa</title>
 </head>
@@ -21,7 +22,7 @@
     </section>
     <h1>Gerenciador de Tarefas</h1>
     <hr>
-
+    <h2>lista de tarefas</h2>
 </body>
 
 </html>
