--- a/index.html
+++ b/index.html
@@ -11,18 +11,10 @@
 </head>
 
 <body>
-    <section>
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <h1></h1>
-        </div>
-    </section>
+
     <h1>Gerenciador de Tarefas</h1>
     <hr>
-    <h2>lista de tarefas</h2>
+    <h2>Filtre por Status:</h2>
 </body>
 
 </html>
