--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 </head>
 
 <body>
-
-    <h1>Gerenciador de Tarefas</h1>
-    <hr>
-    <span>IconeEdit</span>
-    <h2>Filtre por Status:</h2>
+    <section>
+        <div>
+            <h1>Gerenciador de Tarefas</h1>
+        </div>
+        <hr>
+        <span>IconeEdit</span>
+        <span>IconeEdit</span>
+        <h2>Filtre por Status:</h2>
+    </section>
 </body>
 
 </html>
