Diego me destravou

--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
 </head>
 
 <body>
-    <section>
-        <div>
-            <h1>Gerenciador de Tarefas</h1>
-        </div>
-        <hr>
-        <span>IconeEdit</span>
-        <span>IconeEdit</span>
-        <h2>Filtre por Status:</h2>
-    </section>
+
+    <div class="container">
+        <header>
+            <h2>Gerenciamento de Tarefas</h2>
+        </header>
+
+        <section>
+            sistema
+        </section>
+    </div>
+
+
 </body>
 
 </html>
