Não consegui ainda me ajuda diego

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         </header>
 
         <section>
-            sistema
+            Filtre por Status:
+            <div class="left"></div>
+            <div class="right">
+                <div id="footer"></div>
         </section>
     </div>
 
