--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
         </header>
 
         <section>
-            Filtre por Status:
-            <div class="left"></div>
-            <div class="right">
-                <div id="footer"></div>
+            <div>
+                <i class="fas fa-plus fa-4x"></i>
+                <h1>filtre por status:</h1>
+                <div class="left"></div>
+                <div class="right">
+                    <div id="footer"></div>
+                </div>
         </section>
     </div>
 
