--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 
         <section>
             <div>
-                <i class="fas fa-plus fa-4x"></i>
+                <div class="icon1">
+                    <i class="fas fa-plus fa-4x"></i>
+                    <div class="icon2">
+                        <i class="fas fa-plus fa-4x"></i>
+                    </div>
+                </div>
                 <h1>filtre por status:</h1>
                 <div class="left"></div>
                 <div class="right">
