obg Diego pela correção da linha

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -27,10 +27,11 @@
                     </div>
                 </div>
                 <h1>filtre por status:</h1>
-                <div class="left"></div>
-                <div class="right">
-                    <div id="footer"></div>
-                </div>
+            </div>
+            <div class="left"></div>
+            <div class="right">
+                <div id="footer"></div>
+            </div>
         </section>
     </div>
 
