--- a/index.html
+++ b/index.html
@@ -1,42 +1,63 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link href="/css/fontawesome.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link href="/css/fontawesome.css" rel="stylesheet" />
     <title>sistemadetarefa</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div class="container">
-        <header>
-            <h2>Gerenciamento de Tarefas</h2>
-        </header>
-        <div>
-            <section>
-                <div>
-                    <div class="icon1">
-                        <i class="fas fa-plus fa-4x"></i>
-                        <div class="icon2">
-                            <i class="fas fa-plus fa-4x"></i>
-            </section>
+      <header>
+        <h2>Gerenciamento de Tarefas</h2>
+      </header>
+
+      <!--inicio segunda linha-->
+      <section id="sistema">
+        <!--inicio coluna 1-->
+        <div class="sidebar">
+          <div class="linha">
+            <div class="coluna1">
+              <i class="fas fa-plus"></i>
+            </div>
+            <div class="coluna2">
+              <i class="fas fa-edit"></i>
+            </div>
+          </div>
+
+          <div class="linha2">
+            <div class="coluna1">texto</div>
+            <div class="coluna2">select</div>
+          </div>
         </div>
-    </div>
-    <h1>filtre por status:</h1>
-    </div>
-    <div class="left"></div>
-    <div class="right">
-        <div id="footer"></div>
-    </div>
 
+        <!--fim coluna 1-->
+
+        <!--inicio coluna 2-->
+        <div class="fluxo">
+          <div class="linha1">
+            <div class="coluna1">
+              <div>titulo</div>
+              <div>texto status</div>
+            </div>
+
+            <div class="coluna2">
+              <i class="fas fa-edit"></i>
+              <i class="fas fa-edit"></i>
+              <i class="fas fa-edit"></i>
+            </div>
+          </div>
+        </div>
+        <!--fim coluna 2-->
+      </section>
+      <!--fim segunda linha-->
     </div>
-
-
-</body>
-
+  </body>
 </html>
